# Chess

./: Laucher.bat  t_database.db
chess/: README.md  database.db  pyproject.toml  scores.csv  t_database.db  test_database.db
chess/chess/: connection.py  drafting.py  frontend.py  main.py  par.py  script_laucher.py  table.py
chess/tests/: test.py
