[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["SilverPung <kristofer.pawel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinstaller = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
